# lightining-linear-init

./: pyproject.toml
lightning_linear_init/: ae_classifier.py  autoencoder.py  autoencoder_callbacks.py  evolve_ae.py  fc_classifier.py  fcc_callbacks.py  gmlp.py  gmlp_callbacks.py  sparse_ae.py  sparse_ae_callbacks.py  utils.py
