[tool.poetry]
name = "lightning-linear-init"
version = "0.1.0"
description = ""
authors = ["Aiga SUZUKI <tochikuji@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
torch = "^1.9.0"
torchvision = "^0.10.0"
pytorch-lightning = "^1.4.5"
corpca = "^0.1.0"
scikit-learn = "^0.24.2"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
jupyter = "^1.0.0"
pudb = "^2021.1"
torchmetrics = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
